--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <% } %>
     </script>
     <script src="build/build.js"></script>
-    <script src="app.js"></script>
+    <!--script src="app.js"></script-->
+    <script>app = require('tower-todomvc')</script>
   </body>
 </html>
