--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Tower.js • TodoMVC</title>
-    <!--link rel="stylesheet" href="components/todomvc-common/base.css"-->
+    <link rel="stylesheet" href="public/base.css">
   </head>
   <body>
     <section id="todoapp">
