--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Tower.js • TodoMVC</title>
     <link rel="stylesheet" href="public/base.css">
+    <script src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
   </head>
   <body>
     <section id="todoapp">
@@ -51,6 +52,13 @@
     </script>
     <script src="build/build.js"></script>
     <!--script src="app.js"></script-->
-    <script>app = require('tower-todomvc')</script>
+    <script>
+      var app = require('tower-todomvc')
+        , model = app.model
+        , query = app.query
+        , adapter = app.adapter
+        , view = app.view
+        , router = app.router;
+    </script>
   </body>
 </html>
