--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="public/base.css">
     <script src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
   </head>
-  <body>
-    <section id="todoapp">
+  <body view='body'>
+    <section id="todoapp" view='todos'>
       <header id="header">
         <h1>todos</h1>
         <input id="new-todo" placeholder="What needs to be done?" autofocus>
@@ -59,6 +59,8 @@
         , adapter = app.adapter
         , view = app.view
         , router = app.router;
+
+      view.init();
     </script>
   </body>
 </html>
