--- a/index.html
+++ b/index.html
@@ -1,40 +1,42 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Tower.js • TodoMVC</title>
-    <link rel="stylesheet" href="public/base.css">
-    <script src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
-  </head>
-  <body view='body'>
-    <section id="todoapp" view='todos'>
-      <header id="header">
-        <h1>todos</h1>
-        <input id="new-todo" placeholder="What needs to be done?" autofocus>
-      </header>
-      <section id="main">
-        <input id="toggle-all" type="checkbox">
-        <label for="toggle-all">Mark all as complete</label>
-        <ul id="todo-list"></ul>
-      </section>
-      <footer id="footer"></footer>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Tower.js • TodoMVC</title>
+  <link rel="stylesheet" href="public/base.css">
+  <script src="http://code.jquery.com/jquery-2.0.0.min.js"></script>
+</head>
+<body view='body'>
+
+
+  <!-- Main Section -->
+  <section id="todoapp" view='todos'>
+    <header id="header">
+      <h1>todos</h1>
+      <input id="new-todo" placeholder="What needs to be done?" autofocus>
+    </header>
+    <section id="main">
+      <input id="toggle-all" type="checkbox">
+      <label for="toggle-all">Mark all as complete</label>
+      <ul id="todo-list">
+        <li each="todo in todos">
+          <div class="view" view="todo">
+            <input class="toggle" type="checkbox" data-checked="todo.completed">
+            <label data-text="todo.title"></label>
+            <button class="destroy"></button>
+          </div>
+          <input class="edit" data-value="todo.title">
+        </li>
+      </ul>
     </section>
-    <footer id="info">
-      <p>Double-click to edit a todo</p>
-      <p>Written by <a href="https://github.com/addyosmani">Addy Osmani</a></p>
-      <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
-    </footer>
-    <script type="text/template" id="item-template">
-      <div class="view">
-        <input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
-        <label><%- title %></label>
-        <button class="destroy"></button>
-      </div>
-      <input class="edit" value="<%- title %>">
-    </script>
-    <script type="text/template" id="stats-template">
-      <span id="todo-count"><strong><%= remaining %></strong> <%= remaining === 1 ? 'item' : 'items' %> left</span>
+    <footer id="footer">
+      <span id="todo-count">
+        <strong data-text="session.remaining"></strong> <!-- 1,2,3,4 -->
+        <span data-text="session.remaining"></span> <!-- 1,2,3,4 -->
+        <span data-text="session.remainingText"></span> <!-- items vs item -->
+        left
+      </span>
       <ul id="filters">
         <li>
           <a class="selected" href="#/">All</a>
@@ -46,21 +48,33 @@
           <a href="#/completed">Completed</a>
         </li>
       </ul>
-      <% if (completed) { %>
-      <button id="clear-completed">Clear completed (<%= completed %>)</button>
-      <% } %>
-    </script>
-    <script src="build/build.js"></script>
-    <!--script src="app.js"></script-->
-    <script>
-      var app = require('tower-todomvc')
-        , model = app.model
-        , query = app.query
-        , adapter = app.adapter
-        , view = app.view
-        , router = app.router;
 
-      view.init();
-    </script>
-  </body>
+      <div view="stats-completed">
+        <button id="clear-completed">Clear completed (<span data-text="session.completed"></span>)</button>
+      </div>
+
+    </footer>
+
+
+  </section>
+
+
+  <footer id="info">
+    <p>Double-click to edit a todo</p>
+    <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+  </footer>
+
+  <script src="build/build.js"></script>
+  <!--script src="app.js"></script-->
+  <script>
+  var app = require('tower-todomvc')
+  , model = app.model
+  , query = app.query
+  , adapter = app.adapter
+  , view = app.view
+  , router = app.router;
+
+  view.init();
+  </script>
+</body>
 </html>
