--- a/index.html
+++ b/index.html
@@ -66,15 +66,6 @@
 
   <script src="build/build.js"></script>
   <!--script src="app.js"></script-->
-  <script>
-  var app = require('tower-todomvc')
-  , model = app.model
-  , query = app.query
-  , adapter = app.adapter
-  , view = app.view
-  , router = app.router;
-
-  view.init();
-  </script>
+  <script>require('tower-todomvc')</script>
 </body>
 </html>
