--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <section id="todoapp">
     <header id="header">
       <h1>todos</h1>
-      <input id="new-todo" on-keypress="newTodo" placeholder="What needs to be done?" autofocus>
+      <input id="new-todo" on-keypress="newTodo(event)" placeholder="What needs to be done?" autofocus>
     </header>
     <section id="main">
       <input id="toggle-all" type="checkbox">
@@ -20,7 +20,7 @@
         <li data-each="todo in todos">
           <input class="toggle" type="checkbox" data-checked="todo.completed">
           <label data-text="todo.title"></label>
-          <button on-click="removeTodo" class="destroy"></button>
+          <button on-click="remove(todo)" class="destroy"></button>
           <input class="edit" data-value="todo.title">
         </li>
       </ul>
