--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
       </span>
       <ul id="filters">
         <li>
-          <a class="selected" href="#/">All</a>
+          <a class="selected" href="/">All</a>
         </li>
         <li>
-          <a href="#/active">Active</a>
+          <a href="/active">Active</a>
         </li>
         <li>
-          <a href="#/completed">Completed</a>
+          <a href="/completed">Completed</a>
         </li>
       </ul>
       <div>
