--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <input id="new-todo" on-enter="newTodo(event)" placeholder="What needs to be done?" autofocus>
     </header>
     <section id="main">
-      <input id="toggle-all" on-click="toggleCompleted(event)" type="checkbox">
+      <input id="toggle-all" data-checked="toggleCompleted(checked)" type="checkbox">
       <label for="toggle-all">Mark all as complete</label>
       <ul id="todo-list">
         <li data-list="todo in todos">
